# copycat

./: .gitignore  CHANGELOG.md  OVERVIEW.md  Publishing to PyPI.md  README.md  RELEASE_ANNOUNCEMENT.md  TEMPLATE_GUIDE.md  TEMPLATE_INTEGRATION_COMPLETE.md  WARP.md  environment.yml  pyproject.toml  requirements.txt  test_integration.py
.mentat/: format.sh  setup.sh
config/: default.conf
copycat/: cli.py  template_manager.py
copycat.egg-info/: PKG-INFO  SOURCES.txt
desktop/: copycat-tray.desktop  copycat.desktop
lib/: clipboard_core.py  data_handlers.py  system_tray.py  template_manager.py  virtual_keyboard.py
scripts/: install_desktop_integration.sh  setup_copycat.sh  uninstall_desktop_integration.sh
