[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copycat"
version = "1.0.0"
description = "Linux clipboard utility that types around paste restrictions."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["clipboard", "linux", "productivity", "automation"]
license = { file = "LICENSE" }
authors = [{ name = "Pink Pixel" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
tray = ["pystray>=0.19.5"]

[project.urls]
Homepage = "https://github.com/<your-org>/copycat"
Changelog = "https://github.com/<your-org>/copycat/blob/main/CHANGELOG.md"
Issues = "https://github.com/<your-org>/copycat/issues"

[project.scripts]
copycat = "copycat.cli:main"
copycat-gui = "copycat.gui:main"
copycat-tray = "copycat.system_tray:main"

[tool.setuptools]
packages = ["copycat"]
include-package-data = true

[tool.setuptools.package-data]
copycat = [
  "assets/*.png",
  "resources/*.json",
  "resources/*.conf",
  "py.typed",
]
